# dagnostics

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml  test_cpu_training.py
config/: config.yaml.example  drain3_config.ini  filter_patterns.yaml  logging.yaml
data/: README.md
docker/: Dockerfile.training  Dockerfile.training.cpu  README.md  docker-compose.training.cpu.yml  docker-compose.training.yml  start-training-cpu.sh  start-training.sh
scripts/: dataset_generator.py
src/dagnostics/: main.py
src/dagnostics/analysis/: analyzer.py
src/dagnostics/api/: main.py
src/dagnostics/cli/: commands.py  main.py  training_commands.py  utils.py
src/dagnostics/core/: config.py  database.py  models.py
src/dagnostics/heuristics/: __init__.py  error_classifier.py  filter_factory.py  filter_integration.py  pattern_filter.py
src/dagnostics/heuristics/engines/: __init__.py  base.py  custom_function_engine.py  ends_with_engine.py  engine_factory.py  regex_engine.py  starts_with_engine.py  threshold_engine.py
src/dagnostics/llm/: engine.py  filter_factory.py  log_clusterer.py  pattern_filter.py  prompts.py
src/dagnostics/monitoring/: airflow_client.py  analyzer.py
src/dagnostics/training/: fine_tuner.py  huggingface_uploader.py  training_server.py
tasks/: dev.py  lint.py  release.py
